Adjust the findAll method.